[ios] Fixes sticky disclosure header animation.

Bug: 850409
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;luci.chromium.try:ios-simulator-cronet
Change-Id: I045e7cd4e8aa68e578245ca90aefca264158013b
Reviewed-on: https://chromium-review.googlesource.com/1186156
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587171}